syntax = "proto2";

import "message-parts.proto";

package blockchain.proto.protobuf;
option java_package = "io.scalechain.blockchain.proto.protobuf";
option optimize_for = SPEED;

message Account {
    required string name = 1;
}

message WalletTransaction {
    optional Hash blockHash = 1;
    optional int64 blockIndex = 2;
    optional int64 blockTime = 3;
    optional Hash transactionId = 4;
    required int64 addedTime = 5;
    optional int32 transactionIndex = 6;
    required Transaction transaction = 7;
}

message OwnershipDescriptor {
    required string account = 1;
    repeated string privateKeys = 2;
}

message WalletOutput {
    optional int64 blockindex = 1;
    required bool coinbase = 2;
    required bool spent = 3;
    required TransactionOutput transactionOutput = 4;
}

